Core presentation classes were added

--- a/base/core_presentation/src/main/res/values/strings.xml
+++ b/base/core_presentation/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">core_presentation</string>
+    <string name="error_message_unknown_error">An unknown error has been occurred!</string>
 </resources>
