--- a/dashboard/dashboard_presentation/src/main/res/values/strings.xml
+++ b/dashboard/dashboard_presentation/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">dashboard_presentation</string>
+    <string name="bottom_navigation_games">Games</string>
+    <string name="bottom_navigation_live">Live</string>
+    <string name="bottom_navigation_favorites">Favorites</string>
 </resources>
